# cdk-ops-sample

./: .gitignore  .npmignore  README.md  biome.json  cdk.json  jest.config.js  package.json  pnpm-lock.yaml  pyproject.toml  python_fix.sh  tsconfig.json
.kiro/specs/test/: design.md  requirements.md  tasks.md
cfn-guard/rules/bucket-versioning/: bucket-versioning.guard  template.yml
cfn-guard/rules/vpc-enable-dns/: template.yml  vpc-enable-dns.guard
lib/: cdk-ops-sample-stack.ts
lib/aspects/: policy.ts  vpc.ts
lib/constructs/: datastore.ts  index.ts  lambda.ts  network.ts
lib/custom-resource/: CustomNodejsFunction.ts  CustomPythonFunction.ts  index.ts
lib/stack/: cdk-ops-sample-stack.ts
src/function/: list-s3.ts  list_s3.py  recieve-sqs-message.ts
src/function/nodejs-function/: recieve-sqs-message.ts
src/function/python_function/recieve_sqs_message/: index.py
src/function/recieve_sqs_message/: index.py
src/lambda/: list-s3.ts
src/layer/nodejs-layer/: date-utils.ts  index.ts  package.json
src/layer/python_layer/: date_utils.py
tests/: cdk-ops-sample.test.ts  conftest.py  setup-env.ts  test_list_s3.py
tests/lambda/: recieve-sqs-message.test.ts  test_list_s3.py  test_recieve_sqs_message.py
tests/layer/nodejs-layer/: date-utils.test.ts
tests/layer/python_layer/: test_date_utils.py
