[project]
name = "cdk-ops-sample"
version = "0.1.0"
description = "cdk pytest sample"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.38.41"
]

[dependency-groups]
dev = [
    "moto[all]>=5.1.6",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "flake8>=7.3.0",
    "black>=25.1.0",
    "isort>=6.0.1",
    "autopep8>=2.3.2",
]
